--- a/metadata.yaml
+++ b/metadata.yaml
@@ -8,6 +8,9 @@ contributor:
     gutenberg_agent_id: '9742'
     url: http://www.gutenberg.org/2009/agents/9742
     wikipedia: https://en.wikipedia.org/wiki/Charles_Livingston_Bull
+covers:
+- cover_type: archival
+  image_path: 66676-h/images/cover.jpg
 creator:
   author:
     agent_name: Roberts, Charles G. D., Sir
@@ -21,6 +24,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/2272
     wikipedia: https://en.wikipedia.org/wiki/Charles_G._D._Roberts
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/66676#The-King-of-the-Mamozekel
 gutenberg_issued: '2021-11-05'
 identifiers:
   gutenberg: '66676'
